data/derived/sp14/progs/unify/prog4814.ml.out
Characters 32-48:
  let stringOfList f l = List.map (sepConcat "" l) f;;
                                  ^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
